# ChangeLog for www-client/rekonq
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/rekonq/ChangeLog,v 1.3 2010/02/12 08:42:17 ssuominen Exp $

*rekonq-0.3.90 (12 Feb 2010)

  12 Feb 2010; Samuli Suominen <ssuominen@gentoo.org> +rekonq-0.3.90.ebuild:
  Version bump.

*rekonq-0.3.0 (18 Nov 2009)

  18 Nov 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  -rekonq-0.2.90.ebuild, +rekonq-0.3.0.ebuild:
  Version bump.

*rekonq-0.2.90 (01 Nov 2009)

  01 Nov 2009; Samuli Suominen <ssuominen@gentoo.org> +rekonq-0.2.90.ebuild:
  Initial commit wrt #275686, thanks to Tobias Leupold for reporting.
