@@ -1,10 +1,11 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/rekonq/Attic/rekonq-0.3.90.ebuild,v 1.1 2010/02/12 08:42:17 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/rekonq/Attic/rekonq-0.3.90.ebuild,v 1.2 2010/02/14 10:00:40 ssuominen Exp $
 
 EAPI=2
 WEBKIT_REQUIRED=always
 KDE_DOC_DIRS="docs"
+KDE_MINIMAL=4.4
 inherit kde4-base
 
 DESCRIPTION="A browser based on qt-webkit"
@@ -16,6 +17,6 @@ SLOT="4"
 KEYWORDS="~amd64 ~x86"
 IUSE="debug +handbook"
 
-DEPEND=">=x11-libs/qt-gui-4.5:4[dbus]"
+DEPEND=">=x11-libs/qt-gui-4.6:4[dbus]"
 
 DOCS="AUTHORS ChangeLog TODO"
