@@ -1,6 +1,9 @@
 # ChangeLog for www-client/rekonq
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/rekonq/ChangeLog,v 1.3 2010/02/12 08:42:17 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/rekonq/ChangeLog,v 1.4 2010/02/14 10:00:40 ssuominen Exp $
+
+  14 Feb 2010; Samuli Suominen <ssuominen@gentoo.org> rekonq-0.3.90.ebuild:
+  Fix depend to KDE 4.4.0 and Qt 4.6.0 wrt #305041.
 
 *rekonq-0.3.90 (12 Feb 2010)
 
